# value-investment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  _make_sample_excel.py  admin.py  agents.py  ai_agents.py  ai_analyzer.py  anomaly_detector.py  app.py  chart_engine.py  data_loader.py  enhanced_analysis.py  enhanced_report.py  excel_report.py  fmp_api.py  llm.py  main.py  market_data.py  peer_finder.py  pyproject.toml  report_generator.py  requirements.txt  scraper.py  screener.py  summary_report.py  valuation.py
config/: default_criteria.json
