[project]
name = "value-investment"
version = "1.0.0"
description = "AI-powered value investment tool for stock screening and anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alfred Ang" }
]
keywords = ["investing", "stocks", "screening", "ai", "finance"]

dependencies = [
    "pandas>=2.0.0",
    "xlrd>=2.0.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "openai-agents>=0.0.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
value-invest = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
