[project]
name = "value-investment"
version = "1.0.0"
description = "AI-powered value investment tool for stock screening and anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alfred Ang" }
]
keywords = ["investing", "stocks", "screening", "ai", "finance"]

dependencies = [
    "pandas>=2.0.0",
    "xlrd>=2.0.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "openai-agents>=0.0.7",
    "python-dotenv>=1.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
    "tavily-python>=0.3.0",
    "httpx>=0.25.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
value-invest = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
